// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros transform jsx string: transform jsx string 1`] = `

import ct from '../../class-types.macro';
    
<div className={ct("class", "other-class")} />;

      ↓ ↓ ↓ ↓ ↓ ↓

/*#__PURE__*/
React.createElement("div", {
  className: "class other-class",
});


`;

exports[`macros transform jsx with variables and function call to ct: transform jsx with variables and function call to ct 1`] = `

import ct from '../../class-types.macro';

const style = ct("class", "other-class");
    
<div className={ct("string", style, ct("hey", style))} />;

      ↓ ↓ ↓ ↓ ↓ ↓

const style = "class other-class";

/*#__PURE__*/
React.createElement("div", {
  className: "string" + (" " + (style + (" " + ct("hey", style)))),
});


`;

exports[`macros transform jsx with variables and function call: transform jsx with variables and function call 1`] = `

import ct from '../../class-types.macro';

const style = ct("class", "other-class");
    
<div className={ct("string", style, getStyles())} />;

      ↓ ↓ ↓ ↓ ↓ ↓

const style = "class other-class";

/*#__PURE__*/
React.createElement("div", {
  className: "string" + (" " + (style + (" " + getStyles()))),
});


`;

exports[`macros transform jsx with variables and ternary: transform jsx with variables and ternary 1`] = `

import ct from '../../class-types.macro';

const style = ct("class", "other-class");
    
<div className={ct("string", style, true ? "this" : "that")} />;

      ↓ ↓ ↓ ↓ ↓ ↓

const style = "class other-class";

/*#__PURE__*/
React.createElement("div", {
  className: "string" + (" " + (style + (" " + (true ? "this" : "that")))),
});


`;

exports[`macros transform jsx with variables: transform jsx with variables 1`] = `

import ct from '../../class-types.macro';

const style = ct("class", "other-class");
    
<div className={ct("string", style)} />;

      ↓ ↓ ↓ ↓ ↓ ↓

const style = "class other-class";

/*#__PURE__*/
React.createElement("div", {
  className: "string" + (" " + style),
});


`;
